# JTML

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile  LICENSE  LINUX_BUILD.md  Makefile  README.md  about.h  calibration.h  cmake_install.cmake  compile_instructions.md  controls.cpp  controls.h  controls.ui  data_structures_6D.h  direct_data_storage.cpp  direct_data_storage.h  drr_interactor.h  drr_tool.cpp  drr_tool.ui  gpu_metrics.cu  location_storage.cpp  location_storage.h  main.cpp  mainscreen.cpp  mainscreen.h  mainscreen.ui  model.cpp  model.h  optimizer_manager.cpp  optimizer_manager.h  optimizer_settings.cpp  optimizer_settings.h  resource2.h  settings_constants.h  settings_control.cpp  (+2 more)
JTML/: about.ui  (+10 more)
cost_functions/direct_dilation/: CMakeLists.txt  DIRECT_DILATION.cpp  DIRECT_DILATION.h
nfd/: CMakeLists.txt  bspline.cpp  bspline.h  nfd.cpp  nfd.h  nfd_instance.cpp  nfd_instance.h  nfd_library.cpp  nfd_library.h
packaging/: CMakeLists.txt  Makefile  cmake_install.cmake
src/: CMakeLists.txt  JointTrackAuto.rc  Makefile  STLReader.cpp  about.cpp  about.ui  cmake_install.cmake  data_structures_6D.cpp  drr_tool.h  frame.cpp  gpu_dilated_frame.cu  gpu_edge_frame.cu  gpu_frame.cu  gpu_image.cu  gpu_image_functions.cu  gpu_intensity_frame.cu  gpu_model.cu  interactor.h  mainscreen.cpp  mainscreen.h  mainscreen.ui  mainscreen_size_constants.h  metric_enum.h  optimizer_manager.cpp  optimizer_manager.h  resource.h  settings_control.ui  settings_window_size_constants.h  stl_reader.h  sym_trap.cpp  sym_trap.h  sym_trap.ui
src/Study2Grid/: BasicLinearAlgebraStructures.cpp  BasicLinearAlgebraStructures.h  CMakeLists.txt  FileParsers.cpp  FileParsers.h  ImageInfo.cpp  ImageInfo.h  KPReader.cpp  KPReader.h  STLReader.cpp  STLReader.h  Study.cpp  Study.h  main.cpp
src/core/: CMakeLists.txt  Makefile  STLReader.cpp  ambiguous_pose_processing.cpp  cmake_install.cmake  curvature_utilities.cpp  data_structures_6D.cpp  direct_data_storage.cpp  frame.cpp  location_storage.cpp  machine_learning_tools.cpp  model.cpp  optimizer_manager.cpp  optimizer_settings.cpp  stl_reader.cpp  sym_trap_functions.cpp
src/core/jtml_core_autogen/: moc_predefs.h  mocs_compilation.cpp
src/core/jtml_core_autogen/EZC5ESNXS2/: moc_optimizer_manager.cpp  moc_optimizer_manager.cpp.d
src/cost_functions/: CMakeLists.txt  CostFunction.cpp  CostFunctionManager.cpp  DD_NEW_POLE_CONSTRAINT.cpp  DIRECT_DILATION.cpp  DIRECT_DILATION_POLE_CONSTRAINT.cpp  DIRECT_DILATION_SAME_Z.cpp  DIRECT_DILATION_T1.cpp  DIRECT_MAHFOUZ.cpp  Makefile  cmake_install.cmake  sym_trap_function.cpp
src/cost_functions/JTA_Cost_Functions_autogen/: moc_predefs.h  mocs_compilation.cpp
src/gpu/: CMakeLists.txt  Makefile  cmake_install.cmake  curvature_hausdorf_metric.cu  dilate_edge_detected_image.cu  distance_map_metric.cu  edge_detect_rendered_implant_model.cu  fast_implant_dilation_metric.cu  gpu_dilated_frame.cu  gpu_distance_map.cu  gpu_edge_frame.cu  gpu_frame.cu  gpu_heatmaps.cu  gpu_image.cu  gpu_image_functions.cu  gpu_intensity_frame.cu  gpu_metrics.cu  gpu_model.cu  implant_mahfouz_metric.cu  iou.cu  l_1_1_matrix_diff_norm.cu  metric_toolbox.cu  pose_matrix.cpp  registration_metric.cu  render_drr_engine.cu  render_engine.cu
src/gpu/jtml_gpu_autogen/: moc_predefs.h
src/gui/: CMakeLists.txt  Makefile  about.cpp  cmake_install.cmake  controls.cpp  drr_tool.cpp  main.cpp  mainscreen.cpp  settings_control.cpp  sym_trap.cpp  test_image.tif  viewer.cpp
src/gui/Joint-Track-Machine-Learning_autogen/: moc_predefs.h  mocs_compilation.cpp
src/gui/Joint-Track-Machine-Learning_autogen/E6BMKNPBVR/: moc_about.cpp  moc_about.cpp.d  moc_controls.cpp  moc_controls.cpp.d  moc_drr_tool.cpp  moc_drr_tool.cpp.d  moc_mainscreen.cpp  moc_mainscreen.cpp.d  moc_settings_control.cpp  moc_settings_control.cpp.d  qrc_mainscreen.cpp
src/gui/Joint-Track-Machine-Learning_autogen/include/: ui_about.h  ui_controls.h  ui_drr_tool.h  ui_mainscreen.h  ui_settings_control.h
src/nfd/: CMakeLists.txt  Makefile  cmake_install.cmake  nfd.cpp  nfd_instance.cpp  nfd_library.cpp
src/nfd/jtml_nfd_autogen/: moc_predefs.h
src/shape_sensitivity/: CMakeLists.txt  art.cu  art.cuh  descriptors.cpp  descriptors.h  iartd.h  main.cpp  matrix_vector_utils.cpp  matrix_vector_utils.h
test/vtk/: CMakeLists.txt  vtk_tester.cpp
test/vtk/test_case/: HL_V1_K1_0001.tif  HL_V1_K1_0007.tif  HL_V1_K1_0013.tif  HL_V1_K1_0019.tif  HL_V1_K1_0025.tif  HL_V1_K1_0031.tif  HL_V1_K1_0037.tif  HL_V1_K1_0043.tif  HL_V1_K1_0049.tif  HL_V1_K1_0055.tif  HL_V1_K1_0061.tif  HL_V1_K1_0067.tif  HL_V1_K1_0073.tif  HL_V1_K1_0079.tif  HL_V1_K1_0085.tif  HL_V1_K1_0091.tif  KR_left_8_fem.stl  KR_left_8_tib.stl  calibration.txt  fem.jts  tib.jts
test/vtk/test_case/1024/: 0.tif  1.tif  10.tif  11.tif  12.tif  13.tif  14.tif  15.tif  2.tif  3.tif  4.tif  5.tif  6.tif  7.tif  8.tif  9.tif
test/vtk/test_case/1024/fem/: fem_test_prediction_grid_Lima_Updated_000000000000.tif  fem_test_prediction_grid_Lima_Updated_000000000001.tif  fem_test_prediction_grid_Lima_Updated_000000000002.tif  fem_test_prediction_grid_Lima_Updated_000000000003.tif  fem_test_prediction_grid_Lima_Updated_000000000004.tif  fem_test_prediction_grid_Lima_Updated_000000000005.tif  fem_test_prediction_grid_Lima_Updated_000000000006.tif  fem_test_prediction_grid_Lima_Updated_000000000007.tif  fem_test_prediction_grid_Lima_Updated_000000000008.tif  fem_test_prediction_grid_Lima_Updated_000000000009.tif  fem_test_prediction_grid_Lima_Updated_000000000010.tif  fem_test_prediction_grid_Lima_Updated_000000000011.tif  fem_test_prediction_grid_Lima_Updated_000000000012.tif  fem_test_prediction_grid_Lima_Updated_000000000013.tif  fem_test_prediction_grid_Lima_Updated_000000000014.tif  fem_test_prediction_grid_Lima_Updated_000000000015.tif
test/vtk/test_case/1024/tib/: tib_test_prediction_grid_Lima_Updated_000000000000.tif  tib_test_prediction_grid_Lima_Updated_000000000001.tif  (+14 more)
test/vtk/test_case/FFT/: fem_fft.jts  fem_fft_perfect.jts  tib_fft.jts  tib_fft_perfect.jts
(+1464 files in other folders)
